{
    "name": "Controller",
    "maps": [
        {
            "name": "Cursor",
            "id": "b49a8415-5215-4ae7-914a-45988174db29",
            "actions": [
                {
                    "name": "MainClick",
                    "type": "Button",
                    "id": "5d50b4ea-0a08-4cf2-8ffa-9d22eb6fc971",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveClick",
                    "type": "Button",
                    "id": "092b55db-1347-40b3-8353-eade692131ed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CursorPosition",
                    "type": "Value",
                    "id": "cb2e20ea-60e1-401b-aeac-73b4c227064b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a8383064-417a-4645-931a-3c7ec0f3157f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "MainClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4d4310a-d167-41a7-9f3d-4c4616224870",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "MoveClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39ea285c-ed59-49f4-81d1-5b261b0ccc69",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "CursorPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HotKeys",
            "id": "5d8005c2-9b35-420d-bc8d-d23e9040c311",
            "actions": [
                {
                    "name": "IsOrderToQueue",
                    "type": "Button",
                    "id": "f0c4997b-1779-4259-ad09-6e4a9713e7a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d1b2cfab-5457-4359-838a-752174a9b59c",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "IsOrderToQueue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraControl",
            "id": "dd36be66-15d2-423d-be68-c7660e3bc844",
            "actions": [
                {
                    "name": "CameraMove",
                    "type": "Value",
                    "id": "22f85340-8095-4c69-97ec-3f008fa84f51",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "28b1a26a-9e86-4b74-9b09-36fe398b1429",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ChangePosition",
                    "type": "Button",
                    "id": "28813769-dfc6-468c-b6f4-9ef7e984028d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "986c4b44-f0a8-4955-ae77-68b5c58d541c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "NormalizeVector2",
                    "groups": "",
                    "action": "CameraMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d5731111-de6e-4413-a7ca-f72556ca8c9c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6e8b4655-13bb-4c14-9505-1c6b052ec903",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7a875f17-2704-4026-ab6f-f7ea99d8d35c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "51659510-c447-478b-9372-7705328008b6",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "CameraMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4de2e31b-773f-479b-bd44-0eb558708cda",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42ff53bb-c258-4b87-80ce-dcd76fce130b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "ChangePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "051ea9ec-033b-411d-b2b6-fd72e50d3460",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "ChangePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a31355ab-5807-44ce-b8e0-def753109db4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "ChangePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5747098e-a68c-4e80-b9fb-b97093991702",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC Strategy",
                    "action": "ChangePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC Strategy",
            "bindingGroup": "PC Strategy",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}